[metadata]
name = lrp
version = 0.0.1
long_description = file: readme.md
long_description_content_type = text/markdown
url = "https://github.com/rodrigobdz/lrp"
author = rodrigobdz
author_email = r.bermudezschettino@campus.tu-berlin.de
license = MIT
license_file = license
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = lrp
install_requires =
    matplotlib>=3.5.0
    numpy>=1.21.4
    opencv-python>=4.5.4.60
    python-version>"3.7"
    torch>=1.10
    torchvision>=0.11.1

[options.extras_require]
dev =
    autopep8>=1.6.0
    build>=0.7.0
    ipykernel>=6.6.0
    mypy>=0.920
    pydocstyle>=6.1.1
    pylint>=2.13.7
    scipy>=1.7.3
