[metadata]
name = lrp
version = 0.0.29
description = Explanations of Neural Networks using Layer-wise Relevance Propagation and evaluation using Pixel-Flipping and Area Under the Curve.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rodrigobdz/lrp
author = rodrigobdz
author_email = r.bermudezschettino@campus.tu-berlin.de
maintainer = rodrigobdz
maintainer_email = r.bermudezschettino@campus.tu-berlin.de
license = MIT
license_file = license
license_files = license
classifiers =
    Development Status :: 4 - Beta
    Environment :: GPU
    Framework :: IPython
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
packages = find:
install_requires =
    matplotlib>=3.5.2
    numpy>=1.21.4
    opencv-contrib-python-headless>=4.5.4.60
    python-version>"3.7"
    scikit-learn>=1.0.2
    torch>=1.10
    torchvision>=0.11.1
python_requires = >=3.9

[options.extras_require]
dev =
    autopep8>=1.6.0
    build>=0.7.0
    ipykernel>=6.6.0
    mypy>=0.920
    notebook>=6.4.11
    pydocstyle>=6.1.1
    pylint>=2.13.8
    scipy>=1.7.3

[build-system]
requires =
    setuptools
    wheel>=0.37.1
